Refactor /friendships/getAll
